src/tests/variable-declarations/multi-arrays-pointers.txt
variable-declarations/multi-arrays-pointers.c:17:15: error: incompatible types when initializing type 'char' using type 'int *'
     char aa = a;
               ^
variable-declarations/multi-arrays-pointers.c:18:15: error: incompatible types when initializing type 'char' using type 'int **'
     char bb = b;
               ^
variable-declarations/multi-arrays-pointers.c:19:15: error: incompatible types when initializing type 'char' using type 'int (*)[2]'
     char cc = c;
               ^
variable-declarations/multi-arrays-pointers.c:20:15: error: incompatible types when initializing type 'char' using type 'int *(*)[3]'
     char dd = d;
               ^
variable-declarations/multi-arrays-pointers.c:21:15: error: incompatible types when initializing type 'char' using type 'int (**)[3]'
     char ee = e;
               ^
variable-declarations/multi-arrays-pointers.c:22:15: error: incompatible types when initializing type 'char' using type 'int *(**)[3]'
     char ff = f;
               ^
variable-declarations/multi-arrays-pointers.c:23:16: error: incompatible types when initializing type 'char' using type 'int ***(*)[3][4]'
     char gg1 = g1;
                ^
variable-declarations/multi-arrays-pointers.c:24:16: error: incompatible types when initializing type 'char' using type 'int ***(*)[3][4]'
     char gg2 = g2;
                ^
variable-declarations/multi-arrays-pointers.c:25:16: error: incompatible types when initializing type 'char' using type 'int ***(*)[3][4]'
     char gg3 = g3;
                ^
variable-declarations/multi-arrays-pointers.c:26:15: error: incompatible types when initializing type 'char' using type 'int **(*)[2][3][4]'
     char hh = h;
               ^
variable-declarations/multi-arrays-pointers.c:27:15: error: incompatible types when initializing type 'char' using type 'int *(**(*)[3])[4]'
     char ii = i;
               ^
variable-declarations/multi-arrays-pointers.c:28:15: error: incompatible types when initializing type 'char' using type 'int (*(*(*)[2])[3])[4]'
     char jj = j;
               ^
